--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nicol & Ryan's Wedding</title>
+    <title>Tanya & Ryan's Wedding</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@300;400;600&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -22,7 +22,7 @@
                         <div class="envelope-seal">💌</div>
                         <div class="envelope-address">
                             <div class="address-line">To: [Recipient Name]</div>
-                            <div class="address-line">From: Nicol & Ryan</div>
+                            <div class="address-line">From: Tanya & Ryan</div>
                         </div>
                     </div>
                 </div>
@@ -61,9 +61,9 @@
             <div class="menu-content">
                 <div class="menu-section">
                     <h4>Quick Links</h4>
-                    <a href="#invitation" class="menu-link">Invitation</a>
+                    <a href="#invitation" class="menu-link">Invitation Details</a>
                     <a href="#rsvp" class="menu-link">RSVP</a>
-                    <a href="#venue" class="menu-link">Venue</a>
+                    <a href="#rules" class="menu-link">Rules</a>
                 </div>
                 <div class="menu-section">
                     <h4>Q&A / FAQ</h4>
@@ -92,9 +92,9 @@
         <!-- Header Section -->
         <header class="header">
             <div class="header-content">
-                <h1 class="couple-names">Nicol & Ryan</h1>
-                <p class="wedding-date">September 15, 2024</p>
-                <p class="wedding-time">4:00 PM</p>
+                <h1 class="couple-names">Tanya & Ryan</h1>
+                <p class="wedding-date">18 October 2025</p>
+                <p class="wedding-time">10:00 AM</p>
             </div>
         </header>
 
@@ -116,8 +116,8 @@
                 <div class="event-details">
                     <div class="detail-item">
                         <h3>When</h3>
-                        <p>Saturday, September 15, 2024</p>
-                        <p>4:00 PM - 11:00 PM</p>
+                        <p>Saturday, 18 October 2025</p>
+                        <p>10:00 AM - 21:00 PM</p>
                     </div>
 
                     <div class="detail-item" id="venue">
@@ -127,26 +127,29 @@
                         <p>De Deur 1884</p>
                     </div>
 
-                    <div class="detail-item">
+                    <div class="detail-item" id="dress-code">
                         <h3>Dress Code</h3>
-                        <p>Semi-Formal</p>
-                        <p>Brown, champagne, and cream tones encouraged</p>
+                        
+                        <p>Brown, Champagne, Cream, Burned Orange, Black and White</p>
                     </div>
                 </div>
 
                 <div class="rsvp-section" id="rsvp">
                     <h3>RSVP</h3>
-                    <p>Please respond by August 15, 2024</p>
+                    <p>Please respond by August 31, 2025</p>
                     <div class="rsvp-buttons">
                         <button class="rsvp-btn attending">I'll Be There</button>
                         <button class="rsvp-btn not-attending">Regretfully Decline</button>
                     </div>
                 </div>
 
-                <div class="additional-info">
-                    <p>Dinner and dancing to follow</p>
-                    <p>Children welcome</p>
-                    <p>Parking available on-site</p>
+                <div class="additional-info" id="rules">
+                    <h3>Rules</h3>
+                    <p>Children by invitation only.</p>
+                    <p>No additional guests unless specified.</p>
+                    <p>Kindly RSVP by the deadline to be included.</p>
+                    <p>Please do not share this website without permission.</p>
+                    <p>Respect all timelines and instructions on the day.</p>
                 </div>
             </div>
         </section>
@@ -154,7 +157,8 @@
         <!-- Footer -->
         <footer class="footer">
             <p>We can't wait to celebrate with you!</p>
-            <p>Questions? Contact us at nicol.ryan@email.com</p>
+            <p>Questions? Contact us at <a href="mailto:ryanchivanga011@gmail.com">ryanchivanga011@gmail.com</a></p>
+            <p>Or call us at <a href="tel:+27684299988">+27 68 429 9988</a></p>
         </footer>
     </div>
 
