Final final changes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tanya & Ryan's Wedding</title>
+    <title>Ryan & Tanya's Wedding</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@300;400;600&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -22,7 +22,7 @@
                         <div class="envelope-seal">💌</div>
                         <div class="envelope-address">
                             <div class="address-line">To: [Recipient Name]</div>
-                            <div class="address-line">From: Tanya & Ryan</div>
+                            <div class="address-line">From: Ryan & Tanya</div>
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
         <!-- Header Section -->
         <header class="header">
             <div class="header-content">
-                <h1 class="couple-names">Tanya & Ryan</h1>
+                <h1 class="couple-names">Ryan & Tanya</h1>
                 <p class="wedding-date">18 October 2025</p>
                 <p class="wedding-time">10:00 AM</p>
             </div>
@@ -105,9 +105,9 @@
                     <h2>You're Invited</h2>
                     <p class="invitation-text">
                         Together with their families,<br>
-                        Nicol Tanyaradzwa Kondo<br>
-                        &<br>
                         Ryan Kundai Chivanga<br>
+                        &<br>
+                        Nicol Tanyaradzwa Kondo<br>
                         request the pleasure of your company<br>
                         as they celebrate their wedding
                     </p>
@@ -117,7 +117,7 @@
                     <div class="detail-item">
                         <h3>When</h3>
                         <p>Saturday, 18 October 2025</p>
-                        <p>10:00 AM - 21:00 PM</p>
+                        <p>10:00 AM</p>
                     </div>
 
                     <div class="detail-item" id="venue">
@@ -147,7 +147,7 @@
                     <h3>Rules</h3>
                     <p>Children by invitation only.</p>
                     <p>No additional guests unless specified.</p>
-                    <p>Kindly RSVP by the deadline to be included.</p>
+                    <p>Kindly RSVP by 30 August 2025 to be included.</p>
                     <p>Please do not share this website without permission.</p>
                     <p>Respect all timelines and instructions on the day.</p>
                 </div>
