--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="menu-section">
                     <h4>Quick Links</h4>
                     <a href="#invitation" class="menu-link">Invitation Details</a>
-                    <a href="#rsvp" class="menu-link">RSVP</a>
+                    <a href="#banking" class="menu-link">Gift Information</a>
                     <a href="#rules" class="menu-link">Rules</a>
                 </div>
                 <div class="menu-section">
@@ -129,17 +129,28 @@
 
                     <div class="detail-item" id="dress-code">
                         <h3>Dress Code</h3>
-                        
+                        <p>Formal</p>
                         <p>Brown, Champagne, Cream, Burned Orange, Black and White</p>
                     </div>
                 </div>
 
-                <div class="rsvp-section" id="rsvp">
-                    <h3>RSVP</h3>
-                    <p>Please respond by August 31, 2025</p>
-                    <div class="rsvp-buttons">
-                        <button class="rsvp-btn attending">I'll Be There</button>
-                        <button class="rsvp-btn not-attending">Regretfully Decline</button>
+                <!-- Color Palette -->
+                <div class="color-palette">
+                    <img src="colour-pallette.jpg" alt="Wedding Color Palette - Burnt Orange, Brown, Champagne, Cream, Black, and White" class="palette-image">
+                </div>
+
+                <div class="banking-section" id="banking">
+                    <h3>Gift Information</h3>
+                    <p>We are truly grateful for your love and support as we celebrate this special occasion. While a gift table will be available on the day, should you wish to bless us with a monetary contribution instead, please find our banking details below:</p>
+                    
+                    <div class="banking-details">
+                        <h4>Banking Details</h4>
+                        <div class="bank-info">
+                            <p><strong>Capitec Bank</strong></p>
+                            <p>Account Name: MR RK CHIVANGA</p>
+                            <p>Account Number: 1703219749</p>
+                            <p>Branch Code: 470010</p>
+                        </div>
                     </div>
                 </div>
 
@@ -147,7 +158,7 @@
                     <h3>Rules</h3>
                     <p>Children by invitation only.</p>
                     <p>No additional guests unless specified.</p>
-                    <p>Kindly RSVP by 31 August 2025 to be included.</p>
+                    <!-- <p>Kindly RSVP by 31 August 2025 to be included.</p> -->
                     <p>Please do not share this website without permission.</p>
                     <p>Respect all timelines and instructions on the day.</p>
                 </div>
