--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         <h4>Banking Details</h4>
                         <div class="bank-info">
                             <p><strong>Capitec Bank</strong></p>
-                            <p>Account Name: MR RK CHIVANGA</p>
+                            <p class="account-name">Account Name: MR R.K. CHIVANGA</p>
                             <p>Account Number: 1703219749</p>
                             <p>Branch Code: 470010</p>
                         </div>
